--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
               <h1>&emsp;&emsp;RATHZ MEDICAL COLLEGE</h1>
               <nav>
                 <ul>
-                    <li><a href="review.html">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="admission.html">Admissions</a></li>
                     <li><a href="accadamic.html">Academics</a></li>
